samples/_failures_safe/1761289427_7b194e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_62cd2690.c: In function ‘print_token’:
./samples/SAFE/__tmp_62cd2690.c:173:55: error: missing terminating " character
  173 |         "NUMBER", "IDENTIFIER", "OPERATOR", "STRING", "EOF
      |                                                       ^~~~
./samples/SAFE/__tmp_62cd2690.c:173:9: error: expected expression at end of input
  173 |         "NUMBER", "IDENTIFIER", "OPERATOR", "STRING", "EOF
      |         ^~~~~~~~
./samples/SAFE/__tmp_62cd2690.c:173:9: error: expected declaration or statement at end of input
